--- a/themes/bootstrap3/templates/myresearch/menu.phtml
+++ b/themes/bootstrap3/templates/myresearch/menu.phtml
@@ -135,16 +135,18 @@
         $publicInd .= '<span class="sr-only">(' . $this->transEsc('public_list_indicator') . ')</span>';
       ?>
   
-      <?php $lists = $user->getLists() ?>
-      <?php foreach ($lists as $list): ?>
-      <li>
-        <a class="user-list-link icon-link <?=$this->active == 'list' . $list['id'] ? ' active' : ''?>" href="<?=$this->url('userList', ['id' => $list['id']])?>">
-          <?=$this->icon('user-list', 'icon-link__icon') ?>
-          <span class="icon-link__label"><?=$this->escapeHtml($list['title'])?></span>
-          <?=$list['public'] ? $publicInd : ''?>
-          <span class="badge"><?=$list->cnt ?></span>
-        </a>
-      </li>
+      <?php $lists = $this->userlist()->getListsForUser($user->id)?>
+      <?php foreach ($lists as $current): ?>
+        <?php $list = $current[0]; ?>
+        <?php $cnt = $current['cnt']; ?>
+        <li>
+          <a class="user-list-link icon-link <?=$this->active == 'list' . $list->getId() ? ' active' : ''?>" href="<?=$this->url('userList', ['id' => $list->getId()])?>">
+            <?=$this->icon('user-list', 'icon-link__icon') ?>
+            <span class="icon-link__label"><?=$this->escapeHtml($list->getTitle())?></span>
+            <?=$list->isPublic() ? $publicInd : ''?>
+            <span class="badge"><?=$cnt ?></span>
+          </a>
+        </li>
       <?php endforeach; ?>
       <li>
         <a href="<?=$this->url('editList', ['id' => 'NEW'])?>" class="icon-link <?=$this->active == 'editlist/NEW' ? ' active' : ''?>">
