--- a/themes/bootstrap3/templates/combined/results-list.phtml
+++ b/themes/bootstrap3/templates/combined/results-list.phtml
@@ -27,7 +27,9 @@
           const span = template.content.children[0];
 
           const link = document.querySelector('.combined-jump-links .$classId');
-          link.append(span);
+          if (link) {
+            link.append(span);
+          }
         }
 
         if (document.readyState != 'loading') {
