--- a/themes/bootstrap3/scss/components/record.scss
+++ b/themes/bootstrap3/scss/components/record.scss
@@ -217,7 +217,7 @@
 .tab-pane .result {
   margin-left: 0;
 }
-.holdings-tab table {
+.holdings-tab .holdings-table {
   table-layout: auto;
   th:first-child, td:first-child {
     width: 25%;
