--- a/themes/bootstrap5/scss/bootstrap.scss
+++ b/themes/bootstrap5/scss/bootstrap.scss
@@ -44,6 +44,7 @@ $fa-font-path: "../../bootstrap5/css/fonts";
 @import "../../../vendor/twbs/bootstrap/scss/pagination";
 @import "../../../vendor/twbs/bootstrap/scss/tooltip";
 @import "../../../vendor/twbs/bootstrap/scss/card";
+@import "../../../vendor/twbs/bootstrap/scss/popover";
 
 // Optionally include utilities API last to generate classes based on the Sass map in `_utilities.scss`
 @import "../../../vendor/twbs/bootstrap/scss/utilities/api";
