Fix virtual keyboard etc.

--- a/themes/bootstrap5/scss/bs3-compat.scss
+++ b/themes/bootstrap5/scss/bs3-compat.scss
@@ -139,6 +139,10 @@ $well-border:            darken($well-bg, 7%) !default;
   @extend .mb-3;
 }
 
+.input-group {
+  width: initial;
+}
+
 .checkbox {
   position: relative;
   display: block;
