--- a/themes/bootstrap5/scss/bootstrap.scss
+++ b/themes/bootstrap5/scss/bootstrap.scss
@@ -70,6 +70,7 @@ $fa-font-path: "../../bootstrap5/css/fonts";
 @import "components/form";
 @import "components/icons";
 @import "components/js-tree";
+@import "components/keyboard";
 @import "components/lightbox";
 @import "components/offcanvas";
 @import "components/record";
