Set min width on td and th

--- a/themes/bootstrap3/less/components/record.less
+++ b/themes/bootstrap3/less/components/record.less
@@ -219,6 +219,10 @@
 }
 .holdings-tab .holdings-table {
   table-layout: auto;
+
+  th, td {
+    min-width: 10vw;
+  }
 }
 
 /* ------ OpenURL Links ------ */
