--- a/themes/bootstrap3/scss/components/record.scss
+++ b/themes/bootstrap3/scss/components/record.scss
@@ -219,6 +219,10 @@
 }
 .holdings-tab .holdings-table {
   table-layout: auto;
+
+  th, td {
+    min-width: 10vw;
+  }
 }
 
 /* ------ OpenURL Links ------ */
