--- a/themes/bootstrap3/scss/bootstrap.scss
+++ b/themes/bootstrap3/scss/bootstrap.scss
@@ -1,6 +1,8 @@
 /* #SCSS> */
 $fa-font-path: "../../bootstrap3/css/fonts";
-@import "vendor/bootstrap";
+// Load bootstrap via include path to silence deprecation warnings
+// (see vendor subdirectory for the actual contents)
+@import "bootstrap/bootstrap";
 /* <#SCSS */
 /* #LESS>
 @import "vendor/bootstrap/bootstrap";
@@ -9,7 +11,16 @@ $fa-font-path: "../../bootstrap3/css/fonts";
 @import "variables";
 // Import custom (non-vendor) mixins
 @import "mixins/mixins";
+
+/* #SCSS> */
+$fa-font-path: "../../bootstrap3/css/fonts";
+// Load font-awesome via include path to silence deprecation warnings
+// (see vendor subdirectory for the actual contents)
+@import "font-awesome/font-awesome";
+/* <#SCSS */
+/* #LESS>
 @import "vendor/font-awesome/font-awesome";
+<#LESS */
 
 @import "components/accessibility";
 @import "components/variables";
