--- a/themes/bootstrap5/scss/bs3-compat.scss
+++ b/themes/bootstrap5/scss/bs3-compat.scss
@@ -1,6 +1,7 @@
 // Mappings for improved back-compatibility with Boostrap 3
 // See also components/variables.scss
 
+@use 'sass:math';
 
 // *** Variables ***
 $border-radius-base: $border-radius !default;
@@ -28,9 +29,9 @@ $nav-link-hover-bg: $gray-lighter !default;
 $nav-link-padding: $nav-link-padding-y !default;
 
 $nav-tabs-active-link-hover-color: $gray !default;
-$navbar-padding-horizontal:        floor(($grid-gutter-width / 2)) !default;
-
-$padding-base-vertical: $btn-padding-y !default;
+$navbar-padding-horizontal:        math.floor(math.div($grid-gutter-width, 2)) !default;
+$navbar-height:                    50px !default;
+$padding-base-vertical:            $btn-padding-y !default;
 
 $panel-default-border:   $primary-border-subtle !default;
 $panel-bg:               #f5f5f5 !default;
@@ -44,9 +45,14 @@ $screen-md:              map-get($grid-breakpoints, "md");
 $screen-md-min:          $screen-md;
 $screen-lg:              map-get($grid-breakpoints, "lg");
 $screen-lg-min:          $screen-lg;
+$screen-xl:              map-get($grid-breakpoints, "xl");
+$screen-xl-min:          $screen-xl;
+
 $screen-xs-max:          ($screen-sm-min - 1);
 $screen-sm-max:          ($screen-md-min - 1);
 $screen-md-max:          ($screen-lg-min - 1);
+$screen-lg-max:          ($screen-xl-min - 1);
+
 $grid-float-breakpoint:     $screen-sm-min !default;
 $grid-float-breakpoint-max: ($grid-float-breakpoint - 1) !default;
 
@@ -75,6 +81,16 @@ $modal-title-padding: $modal-header-padding;
 $well-bg:                #f5f5f5 !default;
 $well-border:            darken($well-bg, 7%) !default;
 
+$pager-bg:                             $pagination-bg !default;
+$pager-border:                         $pagination-border-color !default;
+$pager-border-radius:                  15px !default;
+$pager-hover-bg:                       $pagination-hover-bg !default;
+$pager-active-bg:                      $pagination-active-bg !default;
+$pager-active-color:                   $pagination-active-color !default;
+$pager-disabled-color:                 $pagination-disabled-color !default;
+
+$cursor-disabled:                not-allowed !default;
+
 
 // *** Styles ***
 .sr-only {
@@ -82,7 +98,6 @@ $well-border:            darken($well-bg, 7%) !default;
 }
 
 .btn-default {
-  //@extend .btn-outline-secondary;
   @include button-outline-variant($text-color, $body-bg);
 }
 .btn-primary {
@@ -91,12 +106,17 @@ $well-border:            darken($well-bg, 7%) !default;
 .btn-group {
   display: inline-block;
 }
+button.list-group-item {
+  width: 100%;
+  text-align: left;
+}
 
 .label {
   @extend .badge;
 }
 .label-info {
-  @extend .text-bg-primary;
+  color: contrast($primary, $text-color, $body-bg);
+  background-color: $primary;
 }
 
 .dropdown-toggle::after {
@@ -164,13 +184,13 @@ h1, .h1,
 h2, .h2,
 h3:not(.popover-header), .h3 {
   margin-top: $line-height-base * 1rem;
-  margin-bottom: ($line-height-base / 2) * 1rem;
+  margin-bottom: math.div($line-height-base, 2) * 1rem;
 }
 h4, .h4,
 h5, .h5,
 h6, .h6 {
-  margin-top: ($line-height-base / 2) * 1rem;
-  margin-bottom: ($line-height-base / 2) * 1rem;
+  margin-top: math.div($line-height-base, 2) * 1rem;
+  margin-bottom: math.div($line-height-base, 2) * 1rem;
 }
 
 .result.embedded .getFull.expanded {
@@ -188,11 +208,6 @@ h6, .h6 {
   display: none !important;
 }
 
-.navbar-collapse {
-  display: flex;
-  justify-content: right;
-}
-
 #modal .modal-content > .close {
   border: 0;
 }
@@ -208,42 +223,63 @@ h6, .h6 {
     background-color: #333;
   }
 }
+.navbar nav {
+  width: 100%;
+}
+.navbar-right {
+  justify-content: right;
+}
 
-// Responsive utilities
-.hidden-xs {
-  @extend .d-none;
-  @extend .d-sm-block;
+.media-body, .media-left, .media-right {
+  display: table-cell;
+  vertical-align: top;
 }
-.visible-xs {
-  @extend .d-block;
-  @extend .d-sm-none;
+.media-body {
+  width: 10000px;
 }
-.hidden-sm {
-  @extend .d-sm-none;
-  @extend .d-md-block;
+
+// Responsive utilities (that avoid `display: *` that would override any existing value)
+@media(max-width: $screen-xs-max) {
+  .hidden-xs {
+    display: none !important;
+  }
+  :not(.visible-xs) {
+    &.visible-sm, &.visible-md, &.visible-lg {
+      display: none !important;
+    }
+  }
 }
-.visible-sm {
-  @extend .d-none;
-  @extend .d-sm-block;
-  @extend .d-md-none;
+@media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+  .hidden-sm {
+    display: none !important;
+  }
+  :not(.visible-sm) {
+    &.visible-xs, &.visible-md, &.visible-lg {
+      display: none !important;
+    }
+  }
 }
-.hidden-lg {
-  @extend .d-lg-none;
-  @extend .d-xl-block;
+@media (min-width: $screen-md-min) and (max-width: $screen-md-max) {
+  .hidden-md {
+    display: none !important;
+  }
+  :not(.visible-md) {
+    &.visible-xs, &.visible-sm, &.visible-lg {
+      display: none !important;
+    }
+  }
 }
-.visible-lg {
-  @extend .d-none;
-  @extend .d-lg-block;
-  @extend .d-xl-none;
+@media (min-width: $screen-lg-min) {
+  .hidden-lg {
+    display: none !important;
+  }
+  :not(.visible-lg) {
+    &.visible-xs, &.visible-sm, &.visible-md {
+      display: none !important;
+    }
+  }
 }
-$screen-xs-min: map-get($grid-breakpoints, "xs");
-$screen-xs-max: calc(map-get($grid-breakpoints, "sm") - 1px);
-$screen-sm-min: map-get($grid-breakpoints, "sm");
-$screen-sm-max: calc(map-get($grid-breakpoints, "md") - 1px);
-$screen-md-min: map-get($grid-breakpoints, "md");
-$screen-md-max: calc(map-get($grid-breakpoints, "lg") - 1px);
-$screen-lg-min: map-get($grid-breakpoints, "lg");
-$screen-md-max: calc(map-get($grid-breakpoints, "xl") - 1px);
+
 
 .hidden-print {
   @extend .d-print-none;
@@ -279,6 +315,64 @@ $screen-md-max: calc(map-get($grid-breakpoints, "xl") - 1px);
     &:hover,
     &:focus {
       background-color: darken($color, 10%);
+    }
+  }
+}
+
+.container, .container-fluid {
+  &::before, &::after {
+    clear: both;
+    display: table;
+    content: " ";
+  }
+}
+
+.pager {
+  padding-left: 0;
+  margin: $line-height-base 0;
+  text-align: center;
+  list-style: none;
+  @include clearfix;
+  li {
+    display: inline;
+    > a,
+    > span {
+      display: inline-block;
+      padding: 5px 14px;
+      background-color: $pager-bg;
+      border: 1px solid $pager-border;
+      border-radius: $pager-border-radius;
+    }
+
+    > a:hover,
+    > a:focus {
+      text-decoration: none;
+      background-color: $pager-hover-bg;
+    }
+  }
+
+  .next {
+    > a,
+    > span {
+      float: right;
+    }
+  }
+
+  .previous {
+    > a,
+    > span {
+      float: left;
+    }
+  }
+
+  .disabled {
+    > a,
+    > a:hover,
+    > a:focus,
+    > span {
+      color: $pager-disabled-color;
+      cursor: $cursor-disabled;
+      background-color: $pager-bg;
     }
   }
 }
