--- a/themes/bootstrap5/scss/variable-overrides.scss
+++ b/themes/bootstrap5/scss/variable-overrides.scss
@@ -1,12 +1,17 @@
 $nav-link-padding-y: 1rem;
 
-$navbar-nav-link-padding-x: 1rem;
-
 $primary:         #265680 !default;
 $success:         #028302 !default;
 $info:            #1C5F74 !default;
 $warning:         #A56100 !default;
 $danger:          #A41915 !default;
+
+$breadcrumb-bg:                 #f5f5f5 !default;
+$breadcrumb-padding-y:              8px !default;
+$breadcrumb-padding-x:              15px !default;
+
+$navbar-nav-link-padding-x: 1rem;
+$navbar-light-color: $primary;
 
 // Disable transitions to allow the bs3-compat.js to do its work without visual distractions:
 $enable-transitions: false;
