--- a/themes/bootstrap3/less/components/record.less
+++ b/themes/bootstrap3/less/components/record.less
@@ -217,6 +217,13 @@
 .tab-pane .result {
   margin-left: 0;
 }
+.holdings-tab .holdings-table {
+  table-layout: auto;
+
+  th, td {
+    min-width: 10vw;
+  }
+}
 
 /* ------ OpenURL Links ------ */
 .openurls {
