FOLIO: Display bound-with titles (#3094)

--- a/themes/bootstrap3/less/components/record.less
+++ b/themes/bootstrap3/less/components/record.less
@@ -223,6 +223,10 @@
   th, td {
     min-width: 10vw;
   }
+
+  .bound-with-records .direct-item {
+    font-weight: bold;
+  }
 }
 
 /* ------ OpenURL Links ------ */
@@ -311,3 +315,4 @@
     }
   }
 }
+
