--- a/themes/bootstrap3/less/components/search.less
+++ b/themes/bootstrap3/less/components/search.less
@@ -29,11 +29,11 @@
   list-style: none;
 }
 // Reset styling of hierarchical facets on the home page:
-.home-facet.facet__tree li {
+.home-facet.facet-tree li {
   line-height: inherit;
   padding-top: 0;
   padding-bottom: 0;
-  .facet__tree__toggle-expanded {
+  .facet-tree__toggle-expanded {
     line-height: inherit;
     padding: 0;
   }
@@ -52,7 +52,6 @@
   .home-facet-container { display: flex; }
   .home-facet {
     flex: 1 1 100%;
-    flex-basis: auto;
   }
   .home-facet-list { flex: 0 1 100%; }
 }
