--- a/themes/bootstrap3/templates/Recommend/SideFacets/hierarchical-facet.phtml
+++ b/themes/bootstrap3/templates/Recommend/SideFacets/hierarchical-facet.phtml
@@ -19,7 +19,7 @@
     'wrapper-tagname' => 'div',
   ];
 ?>
-<ul class="facet__tree<?php if ($truncateSettings): ?> truncate-hierarchical-facets" data-truncate="<?=$this->htmlSafeJsonEncode($truncateSettings)?><?php endif; ?>">
+<ul class="facet-tree<?php if ($truncateSettings): ?> truncate-hierarchical-facets" data-truncate="<?=$this->htmlSafeJsonEncode($truncateSettings)?><?php endif; ?>">
   <?=$this->render('Recommend/SideFacets/hierarchical-facet-level.phtml', [
     'allowExclude' => $this->allowExclude,
     'facetList' => $this->cluster['list'],
