--- a/themes/bootprint3/scss/bootprint.scss
+++ b/themes/bootprint3/scss/bootprint.scss
@@ -155,7 +155,7 @@ ul.random.image li img { margin: 0 auto; }
   .facet-group label.list-group-item input[type=checkbox] { margin-top: 2px; }
 
   .facet { padding: 7px 10px 6px; }
-  .facet__tree .facet {
+  .facet-tree .facet {
     padding-left: 2px;
   }
   .facet.active,
