Align styles with dev branch.

--- a/themes/bootstrap3/less/components/search.less
+++ b/themes/bootstrap3/less/components/search.less
@@ -33,6 +33,8 @@
   line-height: inherit;
   padding-top: 0;
   padding-bottom: 0;
+  border: 0;
+
   .facet-tree__toggle-expanded {
     line-height: inherit;
     padding: 0;
