--- a/themes/bootstrap3/scss/components/sidebar.scss
+++ b/themes/bootstrap3/scss/components/sidebar.scss
@@ -202,6 +202,7 @@ h3.facet-title {
 
   // Constrain the width of lower levels to avoid overflow:
   ul {
+    padding: 0;
     width: 100%;
   }
 
