--- a/themes/bootstrap3/templates/header.phtml
+++ b/themes/bootstrap3/templates/header.phtml
@@ -1,5 +1,6 @@
 <?php $account = $this->auth()->getManager(); ?>
-<div class="banner container navbar <?= $this->stickyElement('navbar-banner') ?>" data-sticky-pos="1">
+<?php $bannerStickyElement = $this->stickyElement()->getElementAttributes('navbar-banner', 1) ?>
+<div class="banner container navbar <?=$bannerStickyElement['class']?>" <?=$bannerStickyElement['posAttr']?>>
   <div class="navbar-header">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#header-collapse" aria-label="<?=$this->transEscAttr('mobile_toggle_navigation_text')?>">
       <?=$this->icon('ui-menu') ?>
@@ -110,7 +111,8 @@
   <?php endif; ?>
 </div>
 <?php if ($this->layout()->searchbox !== false): ?>
-  <div class="search container navbar <?= $this->stickyElement('navbar-search') ?>" data-sticky-pos="2">
+  <?php $searchStickyElement = $this->stickyElement()->getElementAttributes('navbar-search', 2) ?>
+  <div class="search container navbar <?=$searchStickyElement['class']?>" <?=$searchStickyElement['posAttr']?>>
     <div class="nav searchbox hidden-print" role="search">
       <?=$this->layout()->searchbox ?>
     </div>
