--- a/themes/bootstrap3/templates/search/home.phtml
+++ b/themes/bootstrap3/templates/search/home.phtml
@@ -12,9 +12,10 @@
   }
 
   $this->layout()->breadcrumbs = false;
+  $searchStickyElement = $this->stickyElement()->getElementAttributes('home-search', 3);
 ?>
 
-<div class="searchHomeContent <?= $this->stickyElement('home-search') ?>" data-sticky-pos="3">
+<div class="searchHomeContent <?=$searchStickyElement['class']?>" <?=$searchStickyElement['posAttr']?>>
   <?php $this->slot('search-home-hero')->start() ?>
     <?=$this->context($this)->renderInContext('search/searchbox.phtml', ['ignoreHiddenFilterMemory' => true])?>
     <?=$this->inlineScript(\Laminas\View\Helper\HeadScript::SCRIPT, '$("#searchForm_lookfor").focus();', 'SET'); ?>
