only load js if configured

--- a/themes/bootstrap3/templates/layout/layout.phtml
+++ b/themes/bootstrap3/templates/layout/layout.phtml
@@ -61,6 +61,10 @@
       // Collect small scripts together and append as one block:
       $appendScripts = [];
 
+      if ($this->stickyElement()->isEnabled()) {
+        $this->headScript()->appendFile('sticky_elements.js');
+      }
+
       if (!isset($this->renderingError)) {
         // Deal with cart stuff:
         $cart = $this->cart();
